0.1.3 - 2009-XXX-XXX
--------------------
NEW FEATURES
 * Issue 14: per-process username and groupname
 * Issue 51: per-process current working directory
 * Issue 59: Process.is_running() is now 10 times faster.
 * Issue 60: a new graphical process manager is available in demo directory

BUGFIXES
 * Issue 48: incorrect size for mib array defined in getcmdargs for BSD
 * Issue 49: possible memory leak due to missing free() on error condition on
 * Issue 50: fixed getcmdargs() memory fragmentation on BSD
 * Issue 55: test_pid_4 was failing on Windows Vista
 * Issue 57: some unit tests were failing on systems where no swap memory is
   available
 * Issue 58: is_running() is now called before kill() to make sure we are going
   to kill the correct process.


0.1.2 - 2009-05-06
------------------
NEW FEATURES
 * Issue 32: Per-process CPU user/kernel times
 * Issue 33: Process create time
 * Issue 34: Per-process CPU utilization percentage
 * Issue 38: Per-process memory usage (bytes)
 * Issue 41: Per-process memory utilization (percent)
 * Issue 39: System uptime
 * Issue 43: Total system virtual memory
 * Issue 46: Total system physical memory
 * Issue 44: Total system used/free virtual and physical memory

BUGFIXES
 * Issue 36: NoSuchProcess not raised on Windows when accessing timing methods
 * Issue 40: test_get_cpu_times() failing on FreeBSD and OS X
 * Issue 42: get_memory_percent() raises AccessDenied on Windows


0.1.1 - 2009-03-06
------------------
NEW FEATURES
 * Issue 4: FreeBSD support for all functions of psutil
 * Issue 9: Process.uid and Process.gid now retrieve process UID and GID.
 * Issue 11: Support for parent/ppid - Process.parent property returns a
   Process object representing the parent process, and Process.ppid returns
	 the parent PID.
 * Issue 12 & 15: NoSuchProcess exception now raised when creating an object
   for a nonexistent process, or when retrieving information about a process
	 that has gone away.