@@ -253,11 +253,6 @@ class Process(object):
     	return self._procinfo.groupname
 
     @property
-    def environ(self):
-        """The process environment variables as a dictionary."""
-        return _platform_impl.get_process_environ(self.pid)
-
-    @property
     def create_time(self):
         """The process creation time as a floating point number
         expressed in seconds since the epoch, in UTC.
@@ -289,7 +284,8 @@ class Process(object):
 
     def resume(self):
         """Resume process execution."""
-        if hasattr(_platform_impl, "resume_process"):        
+        # windows
+        if hasattr(_platform_impl, "resume_process"):
             _platform_impl.resume_process(self.pid)
         # posix
         try:
